--- a/app/src/App.css
+++ b/app/src/App.css
@@ -77,7 +77,7 @@
   animation-iteration-count: 6; /* 0.5s * 6 = 3s */
 }
 
-
+/*
 @keyframes fadeOut {
   from {
     opacity: 1;
@@ -86,19 +86,71 @@
     opcaity: 0;
   }
 }
-
+*/
 .fade-out {
   opacity: 0;
  
 }
+/*
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opcaity: 1;
+  }
+}
+*/
+.image-hidden{
+  opacity: 0
+}
 
-.animated-image{
+.fade-in{
+  opacity: 1;
+}
+
+.animated-image2{
+  animation: fadeIn 3s forwards; 
+}
+
+.animated-image1{
   animation: fadeOut 3s forwards, shake 3s;
   animation-iteration-count: 10
 }
 
 .App-closed-box{
-  transition: opacity 4s
+  transition: opacity 4s;
+  position: absolute; 
+  left: 0; 
+  top: 0; 
+  
+}
+
+/*
+.box-container {
+  position: relative;   
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}*/
+
+
+.box-container {
+  position: relative;   /* key: makes children overlap */
+  width: 300px; 
+  height: 300px
+}
+
+.App-opened-box{
+  transition: opacity 4s;
+  position: absolute; 
+  left: 0; 
+  top: 0; 
+  opacity: 0;
+}
+
+.App-opened-box.fade-in{
+  opacity: 1;
 }
 
 .container {
