--- a/app/src/App.css
+++ b/app/src/App.css
@@ -83,7 +83,7 @@
     opacity: 1;
   }
   to {
-    opcaity: 0;
+    opacity: 0;
   }
 }
 
@@ -99,6 +99,22 @@
 
 .App-closed-box{
   transition: opacity 4s
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.fade-in {
+  animation: fadeIn 3s;
+  opacity: 1;
+}
+
+.App-opened-box {
+  width: 500px;
+  height: auto;
+  position: absolute;
 }
 
 .container {
